// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputV2 should render correctly when input  has a error sentiment 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-4gfeok-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1ofx5pr-StyledInputWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 48px;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1 {
  color: #3f4250;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::-webkit-input-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::-moz-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1:-ms-input-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper[data-success='true'] {
  border-color: #22674e;
}

.css-1ofx5pr-StyledInputWrapper[data-error='true'] {
  border-color: #b3144d;
}

.css-1ofx5pr-StyledInputWrapper[data-readOnly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1 {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-webkit-input-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-moz-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1:-ms-input-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper:not([data-disabled='true']):not([data-readOnly]):hover {
  border-color: #8c40ef;
}

.css-137prd4-StyledInput {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  padding-left: 16px;
  background: transparent;
}

.css-pgps27-Stack-StateStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 16px;
}

.css-104pobb-sizeStyles {
  vertical-align: middle;
  fill: #b3144d;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-104pobb-sizeStyles .fillStroke {
  stroke: #b3144d;
  fill: none;
}

.css-vdlwt8-StyledText {
  color: #b3144d;
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div
      class="css-irytw7-Stack ehpbis70"
    >
      <div
        class="css-135dzb3-Stack ehpbis70"
      >
        <label
          class="css-4gfeok-StyledText e13y3mga0"
          for=":rk:"
        >
          Test
        </label>
      </div>
    </div>
    <div>
      <div
        class="css-1ofx5pr-StyledInputWrapper e7tir8v0"
        data-disabled="false"
        data-error="true"
        data-readonly="false"
        data-success="false"
      >
        <input
          aria-invalid="true"
          class="css-137prd4-StyledInput e7tir8v1"
          id=":rk:"
          type="text"
          value="test"
        />
        <div
          class="css-pgps27-Stack-StateStack e7tir8v4"
        >
          <svg
            class="css-104pobb-sizeStyles e1gt4cfo0"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M8.0001 2.76373C5.10813 2.76373 2.76373 5.10813 2.76373 8.0001C2.76373 10.8921 5.10813 13.2365 8.0001 13.2365C10.8921 13.2365 13.2365 10.8921 13.2365 8.0001C13.2365 5.10813 10.8921 2.76373 8.0001 2.76373ZM1.6001 8.0001C1.6001 4.46548 4.46548 1.6001 8.0001 1.6001C11.5347 1.6001 14.4001 4.46548 14.4001 8.0001C14.4001 11.5347 11.5347 14.4001 8.0001 14.4001C4.46548 14.4001 1.6001 11.5347 1.6001 8.0001ZM8.0001 5.47889C8.32143 5.47889 8.58192 5.73937 8.58192 6.0607V8.48495C8.58192 8.80628 8.32143 9.06676 8.0001 9.06676C7.67877 9.06676 7.41828 8.80628 7.41828 8.48495V6.0607C7.41828 5.73937 7.67877 5.47889 8.0001 5.47889ZM7.41828 10.4243C7.41828 10.103 7.67877 9.84252 8.0001 9.84252H8.00495C8.32628 9.84252 8.58676 10.103 8.58676 10.4243V10.4292C8.58676 10.7505 8.32628 11.011 8.00495 11.011H8.0001C7.67877 11.011 7.41828 10.7505 7.41828 10.4292V10.4243Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <p
      class="css-vdlwt8-StyledText e13y3mga0"
    >
      success
    </p>
  </div>
</DocumentFragment>
`;

exports[`TextInputV2 should render correctly when input has a success sentiment 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-4gfeok-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1ofx5pr-StyledInputWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 48px;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1 {
  color: #3f4250;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::-webkit-input-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::-moz-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1:-ms-input-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper[data-success='true'] {
  border-color: #22674e;
}

.css-1ofx5pr-StyledInputWrapper[data-error='true'] {
  border-color: #b3144d;
}

.css-1ofx5pr-StyledInputWrapper[data-readOnly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1 {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-webkit-input-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-moz-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1:-ms-input-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper:not([data-disabled='true']):not([data-readOnly]):hover {
  border-color: #8c40ef;
}

.css-137prd4-StyledInput {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  padding-left: 16px;
  background: transparent;
}

.css-pgps27-Stack-StateStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 16px;
}

.css-m1zjrh-sizeStyles {
  vertical-align: middle;
  fill: #22674e;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-m1zjrh-sizeStyles .fillStroke {
  stroke: #22674e;
  fill: none;
}

.css-1n7fwv3-StyledText {
  color: #22674e;
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div
      class="css-irytw7-Stack ehpbis70"
    >
      <div
        class="css-135dzb3-Stack ehpbis70"
      >
        <label
          class="css-4gfeok-StyledText e13y3mga0"
          for=":rg:"
        >
          Test
        </label>
      </div>
    </div>
    <div>
      <div
        class="css-1ofx5pr-StyledInputWrapper e7tir8v0"
        data-disabled="false"
        data-error="false"
        data-readonly="false"
        data-success="true"
      >
        <input
          aria-invalid="false"
          class="css-137prd4-StyledInput e7tir8v1"
          id=":rg:"
          type="text"
          value="test"
        />
        <div
          class="css-pgps27-Stack-StateStack e7tir8v4"
        >
          <svg
            class="css-m1zjrh-sizeStyles e1gt4cfo0"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M8.0001 2.76373C5.10813 2.76373 2.76373 5.10813 2.76373 8.0001C2.76373 10.8921 5.10813 13.2365 8.0001 13.2365C10.8921 13.2365 13.2365 10.8921 13.2365 8.0001C13.2365 5.10813 10.8921 2.76373 8.0001 2.76373ZM1.6001 8.0001C1.6001 4.46548 4.46548 1.6001 8.0001 1.6001C11.5347 1.6001 14.4001 4.46548 14.4001 8.0001C14.4001 11.5347 11.5347 14.4001 8.0001 14.4001C4.46548 14.4001 1.6001 11.5347 1.6001 8.0001ZM10.2777 6.07211C10.5391 6.25888 10.5997 6.62225 10.4129 6.88373L7.98869 10.2777C7.88929 10.4168 7.73368 10.5052 7.56324 10.5193C7.39279 10.5334 7.22478 10.4718 7.10384 10.3509L5.6493 8.89635C5.42208 8.66914 5.42208 8.30075 5.6493 8.07354C5.87651 7.84632 6.2449 7.84632 6.47211 8.07354L7.44101 9.04243L9.46605 6.20738C9.65282 5.9459 10.0162 5.88534 10.2777 6.07211Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <p
      class="css-1n7fwv3-StyledText e13y3mga0"
    >
      success
    </p>
  </div>
</DocumentFragment>
`;

exports[`TextInputV2 should render correctly when input is disabled 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-4gfeok-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1ofx5pr-StyledInputWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 48px;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1 {
  color: #3f4250;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::-webkit-input-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::-moz-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1:-ms-input-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper[data-success='true'] {
  border-color: #22674e;
}

.css-1ofx5pr-StyledInputWrapper[data-error='true'] {
  border-color: #b3144d;
}

.css-1ofx5pr-StyledInputWrapper[data-readOnly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1 {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-webkit-input-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-moz-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1:-ms-input-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper:not([data-disabled='true']):not([data-readOnly]):hover {
  border-color: #8c40ef;
}

.css-137prd4-StyledInput {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  padding-left: 16px;
  background: transparent;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div
      class="css-irytw7-Stack ehpbis70"
    >
      <div
        class="css-135dzb3-Stack ehpbis70"
      >
        <label
          class="css-4gfeok-StyledText e13y3mga0"
          for=":ra:"
        >
          Test
        </label>
      </div>
    </div>
    <div>
      <div
        class="css-1ofx5pr-StyledInputWrapper e7tir8v0"
        data-disabled="true"
        data-error="false"
        data-readonly="false"
        data-success="false"
      >
        <input
          aria-invalid="false"
          class="css-137prd4-StyledInput e7tir8v1"
          disabled=""
          id=":ra:"
          type="text"
          value="test"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextInputV2 should render correctly when input is readOnly 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-4gfeok-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1ofx5pr-StyledInputWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 48px;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1 {
  color: #3f4250;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::-webkit-input-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::-moz-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1:-ms-input-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper[data-success='true'] {
  border-color: #22674e;
}

.css-1ofx5pr-StyledInputWrapper[data-error='true'] {
  border-color: #b3144d;
}

.css-1ofx5pr-StyledInputWrapper[data-readOnly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1 {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-webkit-input-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-moz-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1:-ms-input-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper:not([data-disabled='true']):not([data-readOnly]):hover {
  border-color: #8c40ef;
}

.css-137prd4-StyledInput {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  padding-left: 16px;
  background: transparent;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div
      class="css-irytw7-Stack ehpbis70"
    >
      <div
        class="css-135dzb3-Stack ehpbis70"
      >
        <label
          class="css-4gfeok-StyledText e13y3mga0"
          for=":rd:"
        >
          Test
        </label>
      </div>
    </div>
    <div>
      <div
        class="css-1ofx5pr-StyledInputWrapper e7tir8v0"
        data-disabled="false"
        data-error="false"
        data-readonly="true"
        data-success="false"
      >
        <input
          aria-invalid="false"
          class="css-137prd4-StyledInput e7tir8v1"
          id=":rd:"
          readonly=""
          type="text"
          value="test"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextInputV2 should render correctly with basic props 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-4gfeok-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1ofx5pr-StyledInputWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 48px;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1 {
  color: #3f4250;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::-webkit-input-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::-moz-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1:-ms-input-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper[data-success='true'] {
  border-color: #22674e;
}

.css-1ofx5pr-StyledInputWrapper[data-error='true'] {
  border-color: #b3144d;
}

.css-1ofx5pr-StyledInputWrapper[data-readOnly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1 {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-webkit-input-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-moz-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1:-ms-input-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper:not([data-disabled='true']):not([data-readOnly]):hover {
  border-color: #8c40ef;
}

.css-137prd4-StyledInput {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  padding-left: 16px;
  background: transparent;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div
      class="css-irytw7-Stack ehpbis70"
    >
      <div
        class="css-135dzb3-Stack ehpbis70"
      >
        <label
          class="css-4gfeok-StyledText e13y3mga0"
          for=":r0:"
        >
          Test
        </label>
      </div>
    </div>
    <div>
      <div
        class="css-1ofx5pr-StyledInputWrapper e7tir8v0"
        data-disabled="false"
        data-error="false"
        data-readonly="false"
        data-success="false"
      >
        <input
          aria-invalid="false"
          class="css-137prd4-StyledInput e7tir8v1"
          id=":r0:"
          type="text"
          value="test"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
